outputs_20260330-014843-be942955/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_kguoax7c\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_kguoax7c\src\egtm_atom_3_phase_inverter_pwm.c:131:35: error: 'IfxSrc_VmId_0' undeclared (first use in this function); did you mean 'IfxSrc_VmId'?
  131 |     interruptConfig.vmId        = IfxSrc_VmId_0;
      |                                   ^~~~~~~~~~~~~
      |                                   IfxSrc_VmId
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_kguoax7c\src\egtm_atom_3_phase_inverter_pwm.c:131:35: note: each undeclared identifier is reported only once for each function it appears in
